12654 nxge: smatch and NULL pointer errors Reviewed by: Michael Speer <michael.speer@pluribusnetworks.com> Reviewed by: Yuri Pankov <ypankov@tintri.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Vitaliy Gusev <gusev.vitaliy@icloud.com> Approved by: Dan McDonald <danmcd@joyent.com>